Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,10 @@ html {
 
 body {
   margin: 0px;
-  min-height: 100vh;
-  padding-bottom: 20px;
+  height: 100vh;
+  /* padding-bottom: 20px; */
   position: relative;
+  overflow: visible;
 }
 
 
@@ -174,4 +175,10 @@ body {
   font-size: 2.5rem;
   color: #ffffff;
   font-weight: 200;
+}
+
+@media (max-width: 500px) {
+  .city {
+    font-size: 2rem;
+  }
 }
